--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-```
+Running / building the Docker images:
+
+```bash
 git clone https://github.com/hecko/brocaar-lorawan-docker.git
 docker-compose up --build --force-recreate -d --remove-orphans
-```
+``
+
 Now connect to the host, https, port 8080
